Feature: number section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Web-tractor</title>
+  <link rel="icon" type="image/x-icon" href="./images/favicon-tractor-svgrepo-com (2).svg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./pages/index.css" />
 </head>
@@ -108,43 +109,43 @@
               <button id="diagnose_btn" data-type-service-button="diagnostics"
                 class="nav-tabs__btn nav-tabs__btn_active" type="button">
                 <img class="nav-tabs__img" src="./images/stethoscope-svgrepo-com.svg" alt="Диагностика" />
-                <span class="nav-tabs__label text_style_regular-paragraph">Диагностика</span>
+                <span class="nav-tabs__label text_style_services-btn">Диагностика</span>
               </button>
             </div>
             <div class="swiper-slide"><button id="engine_btn" data-type-service-button="engine" class="nav-tabs__btn"
                 type="button">
                 <img class="nav-tabs__img" src="./images/engine-motor-svgrepo-com.svg" alt="Ремонт двигателя" />
-                <span class="nav-tabs__label text_style_regular-paragraph">Ремонт двигателя</span>
+                <span class="nav-tabs__label text_style_services-btn">Ремонт двигателя</span>
               </button>
             </div>
             <div class="swiper-slide">
               <button id="oil_btn" data-type-service-button="oil-lube" class="nav-tabs__btn" type="button">
                 <img class="nav-tabs__img" src="./images/oil-svgrepo-com.svg" alt="Масло/фильтры" />
-                <span class="nav-tabs__label text_style_regular-paragraph">Масло/фильтры</span>
+                <span class="nav-tabs__label text_style_services-btn">Масло/фильтры</span>
               </button>
             </div>
             <div class="swiper-slide">
               <button id="tires_btn" data-type-service-button="tires" class="nav-tabs__btn" type="button">
                 <img class="nav-tabs__img" src="./images/tire-svgrepo-com.svg" alt="Шины" />
-                <span class="nav-tabs__label text_style_regular-paragraph">Шины</span>
+                <span class="nav-tabs__label text_style_services-btn">Шины</span>
               </button>
             </div>
             <div class="swiper-slide">
               <button id="gear_btn" data-type-service-button="transmission" class="nav-tabs__btn" type="button">
                 <img class="nav-tabs__img" src="./images/gearshift-shift-svgrepo-com.svg" alt="Трансмиссия" />
-                <span class="nav-tabs__label text_style_regular-paragraph">Трансмиссия</span>
+                <span class="nav-tabs__label text_style_services-btn">Трансмиссия</span>
               </button>
             </div>
             <div class="swiper-slide">
               <button id="battery_btn" data-type-service-button="batteries" class="nav-tabs__btn" type="button">
                 <img class="nav-tabs__img" src="./images/battery-svgrepo-com.svg" alt="Аккумуляторы" />
-                <span class="nav-tabs__label text_style_regular-paragraph">Аккумуляторы</span>
+                <span class="nav-tabs__label text_style_services-btn">Аккумуляторы</span>
               </button>
             </div>
           </div>
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+
         </div>
       </div>
       <div class="services__wrapper">
@@ -241,6 +242,39 @@
         <div class="swiper-button-next"></div>
       </div>
 
+    </section>
+
+    <section class="numbers">
+      <div class="section-box numbers__wrapper">
+        <div class="numbers__item">
+          <p class="numbers__digit text_style_number-digit">20</p>
+          <div class="numbers__stat-container">
+            <p class="numbers__stat text_style_number-stat">Лет</p>
+            <p class="numbers__stat text_style_number-stat">опыта</p>
+          </div>
+        </div>
+        <div class="numbers__item">
+          <p class="numbers__digit text_style_number-digit">2.9k</p>
+          <div class="numbers__stat-container">
+            <p class="numbers__stat text_style_number-stat">Произведено</p>
+            <p class="numbers__stat text_style_number-stat">ремонтов</p>
+          </div>
+        </div>
+        <div class="numbers__item">
+          <p class="numbers__digit text_style_number-digit">32</p>
+          <div class="numbers__stat-container">
+            <p class="numbers__stat text_style_number-stat">Профессиональных</p>
+            <p class="numbers__stat text_style_number-stat">специалистов</p>
+          </div>
+        </div>
+        <div class="numbers__item">
+          <p class="numbers__digit text_style_number-digit">100%</p>
+          <div class="numbers__stat-container">
+            <p class="numbers__stat text_style_number-stat">Довольных</p>
+            <p class="numbers__stat text_style_number-stat">клиентов</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- News section -->
