Fix: link in logo

--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
             <li class="provide__list-item text_style_regular-paragraph">В любом количестве </li>
             <li class="provide__list-item text_style_regular-paragraph">Индивидульные приборы в кабину</li>
             <li class="provide__list-item text_style_regular-paragraph">Гарантия 3 года</li>
+            <li class="provide__list-item text_style_regular-paragraph">Индивидуальный подход </li>
+            <li class="provide__list-item text_style_regular-paragraph">В любом количестве </li>
+            <li class="provide__list-item text_style_regular-paragraph">Индивидульные приборы в кабину</li>
+            <li class="provide__list-item text_style_regular-paragraph">Гарантия 3 года</li>
           </ul>
           <a class="provide__link text_style_regular-paragraph" href="./machines.html">Узнать подробнее</a>
         </div>
