--- a/gallery.html
+++ b/gallery.html
@@ -29,12 +29,10 @@
         <div class="nav-bar__container">
           <ul class="nav-bar__list">
             <li class="nav-bar__item">
-              <a class="nav-bar__link text_style_navbar" href="./index.html">Главная</a>
+              <a class="nav-bar__link text_style_navbar " href="./machines.html">Наша техника</a>
             </li>
-            <li class="nav-bar__item ">
-              <a class="nav-bar__link text_style_navbar" href="./general-repair.html">Капитальный
-                ремонт</a>
-            </li>
+
+
             <li class="nav-bar__item ">
               <a class="nav-bar__link text_style_navbar" href="./services.html">Сервис</a>
             </li>
@@ -42,7 +40,7 @@
               <a class="nav-bar__link text_style_navbar " href="./spare-parts.html">Запчасти</a>
             </li>
             <li class="nav-bar__item">
-              <a class="nav-bar__link text_style_navbar " href="./machines.html">Наша техника</a>
+              <a class="nav-bar__link text_style_navbar" href="./index.html">О нас</a>
             </li>
             <li class="nav-bar__item">
               <a class="nav-bar__link text_style_navbar nav-bar__link_active" href="./gallery.html">Галерея работ</a>
@@ -70,6 +68,11 @@
   </header>
 
   <main>
+
+    <article class="page-title">
+      <h2 class="page-title__header text_style_title-white">Галерея работ</h2>
+    </article>
+
     <h1 class="development">Страница "Галерея работ в разработке"</h1>
 
   </main>
