--- a/machines.html
+++ b/machines.html
@@ -29,11 +29,7 @@
         <div class="nav-bar__container">
           <ul class="nav-bar__list">
             <li class="nav-bar__item">
-              <a class="nav-bar__link text_style_navbar" href="./index.html">Главная</a>
-            </li>
-            <li class="nav-bar__item ">
-              <a class="nav-bar__link text_style_navbar" href="./general-repair.html">Капитальный
-                ремонт</a>
+              <a class="nav-bar__link text_style_navbar nav-bar__link_active" href="./machines.html">Наша техника</a>
             </li>
             <li class="nav-bar__item ">
               <a class="nav-bar__link text_style_navbar" href="./services.html">Сервис</a>
@@ -41,8 +37,9 @@
             <li class="nav-bar__item">
               <a class="nav-bar__link text_style_navbar " href="./spare-parts.html">Запчасти</a>
             </li>
+
             <li class="nav-bar__item">
-              <a class="nav-bar__link text_style_navbar nav-bar__link_active" href="./machines.html">Наша техника</a>
+              <a class="nav-bar__link text_style_navbar" href="./index.html">О нас</a>
             </li>
             <li class="nav-bar__item">
               <a class="nav-bar__link text_style_navbar" href="./gallery.html">Галерея работ</a>
@@ -65,11 +62,14 @@
       </div>
     </div>
 
-
-
   </header>
 
   <main>
+
+    <article class="page-title">
+      <h2 class="page-title__header text_style_title-white">Наша техника</h2>
+    </article>
+
     <h1 class="development">Страница "Наша техника" в разработке</h1>
 
   </main>
