--- a/general-repair.html
+++ b/general-repair.html
@@ -29,12 +29,9 @@
         <div class="nav-bar__container">
           <ul class="nav-bar__list">
             <li class="nav-bar__item">
-              <a class="nav-bar__link text_style_navbar" href="./index.html">Главная</a>
+              <a class="nav-bar__link text_style_navbar" href="./index.html">О нас</a>
             </li>
-            <li class="nav-bar__item ">
-              <a class="nav-bar__link text_style_navbar nav-bar__link_active" href="./general-repair.html">Капитальный
-                ремонт</a>
-            </li>
+
             <li class="nav-bar__item ">
               <a class="nav-bar__link text_style_navbar" href="./services.html">Сервис</a>
             </li>
