--- a/index.html
+++ b/index.html
@@ -121,6 +121,72 @@
 
     </section>
 
+    <!-- Tractors we make -->
+
+
+
+    <section class="our-machines">
+      <div class="section-intro_type_fullwidth">
+        <h2 class="section-intro__title text_style_title">Наша техника</h2>
+        <p class="section-intro__subtitle text_style_bold-paragraph">
+          С 2015 года компания наладила свое производство тракторов и оборудования.
+        </p>
+        <div class="section-intro__dash"></div>
+      </div>
+
+      <div class="tractor">
+
+        <img class="tractor__img" src="./images/our-tractor-model_1.png" alt="">
+
+        <div class="tractor__properties tractor__properties_type_engine tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Двигатель: Д-440-22 (А-41)</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Двигатели А-41 — надежность и безотказность,
+            проверенная временем.</p>
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_cabin tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Цельнометаллическая кабина:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Трактор имеет герметизированную шумо- и
+            виброизолированную кабину.</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_electric tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph">Новое электрооборудование:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Напряжение бортсети – 12 В</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_otval tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Универсальный отвал:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Бульдозерное оборудование широко применяется на
+            земляных, дорожно-строительных и планировочных работах.</p>
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_chassis tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph"> Надежные гусеничное шасси:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Стандартная гусеница 390мм или Болотная гусеница 670
+            мм</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_gearbox tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph"> Автоматическая коробка передач:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Это увеличивает производительность машины и упрощает
+            управление ею</p>
+
+        </div>
+
+
+
+      </div>
+      <div class="tractor__links-wrapper">
+        <a class="tractor__link" href="./machines.html">Наша техника</a>
+        <a class="tractor__link" href="./machines.html">Подробнее о модели</a>
+      </div>
+
+    </section>
+
 
 
     <!-- Review section
@@ -304,16 +370,18 @@
           <div class="caption">
             <p class="caption__text text_style_regular-paragraph"></p>
           </div>
-          <img class="vehicle-container" src="./images/image2vector-2.svg">
+          <img class="vehicle-container" src="./images/Picture_1-removebg-preview.png">
           <div data-type_icon="engine" class="icon__engine icon__engine_active vehicle-container__icon"></div>
           <div data-type_icon="diagnostics" class="icon__diagnostics vehicle-container__icon"></div>
           <div data-type_icon="oil-lube" class="icon__oil-lube vehicle-container__icon"></div>
           <div data-type_icon="tires" class="icon__tires vehicle-container__icon"></div>
           <div data-type_icon="transmission" class="icon__transmission vehicle-container__icon"></div>
-          <div data-type_icon="batteries" class="icon__batteries vehicle-container__icon">
+          <div data-type_icon="batteries" class="icon__batteries vehicle-container__icon"></div>
 
-          </div>
+
         </div>
+        <a class="vehicle-container__link text_style_regular-paragraph-white-bold" href="./services.html">Подробнее</a>
+
       </div>
     </section>
 
